--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -29,9 +29,9 @@
 
 // Palette.
 	$palette: (
-		wrapper-bg:			#212931,
+		wrapper-bg:			#0080ff,
 
-		bg:					#ffffff,
+		bg:					#bd3535,
 		fg:					#212931,
 		fg-bold:			#212931,
 		fg-light:			mix(#212931, #ffffff, 50%),
