--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -7,7 +7,7 @@
 /* Image */
 
 	.image {
-		border: 0;
+		border: 100px;
 		border-radius: _size(border-radius);
 		display: inline-block;
 		position: relative;
@@ -15,6 +15,17 @@
 		img {
 			border-radius: _size(border-radius);
 			display: block;
+		}
+
+		&.center {
+			text-align: center;
+		}
+
+		&.icon {
+			display: center;
+			margin-left: auto;
+			margin-right: auto;
+			width: 50%;
 		}
 
 		&.left,
