--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2594,6 +2594,24 @@ input, select, textarea {
 		position: relative;
 	}
 
+		.icon.image{
+		border-radius: 30%;
+		border: 2px solid #ffffff;
+		display: flex;
+		}
+	
+		.square{
+		width:10px;
+		height:10px;
+	
+		}
+
+		.image.center {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+
 		.image img {
 			display: block;
 		}
@@ -4688,14 +4706,3 @@ input, select, textarea {
 
 	}
 
-.icon.image{
-	border-radius: 30%;
-	border: 2px solid #ffffff;
-	display: flex;
-}
-
-.square{
-	width:10px;
-	height:10px;
-
-}
